feat: add list logstreams feature
